deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests: #Used by scheduler to determine where the pods will be deployed, pods is guaranteed to get much resources
            cpu: 200m
            memory: 128Mi
          limits: #
            cpu: 200m #if reached pods will get throttled
            memory: 128Mi #if reached pods might get OOM killed
