service-clusterip-poc-ns.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  namespace: poc-anthos
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
