service-gatewayinternal-globalaccess-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: helloweb-gateway-http
  namespace: default
spec:
  # google kubernetes engine layer 7 regional internal load balancer
  # see https://cloud.google.com/kubernetes-engine/docs/how-to/gatewayclass-capabilities
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: helloweb-listener-http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: helloweb-httproute-http
  namespace: default
spec:
  parentRefs:
  - name: helloweb-gateway-http
  rules:
  - backendRefs: # ClusterIP Service
    - name: helloweb
      port: 80
