service-gatewayinternal-globalaccess.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: helloweb-gateway
  namespace: default
spec:
  # google kubernetes engine layer 7 regional internal load balancer
  # see https://cloud.google.com/kubernetes-engine/docs/how-to/gatewayclass-capabilities
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: helloweb-listener
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: my-cert
  addresses:
  - type: NamedAddress
    value: gateway-gke-internal-1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: helloweb-httproute
  namespace: default
spec:
  parentRefs:
  - name: helloweb-gateway
  rules:
  - backendRefs:
    - name: helloweb
      port: 80
